# JunNotes

./: .gitignore  Linux使用笔记.txt  MySql使用技巧.txt  NodeJS使用技巧.txt  Pip-Conda使用技巧.txt  PyCharm使用技巧.txt  README.md  StartWebService-doccano.bat  ruff.toml
CodeSamples/: convert_markdown_to_csdn_format.py
CodeSamples/modelscope/: download_model.py
CodeSamples/optimum/: export_onnx.bat  export_onnx.py  quantize_onnx.bat  quantize_onnx.md  quantize_onnx_dynamic.py  quantize_onnx_static.py
CodeSamples/python-setup/: .clangd.example  .gitignore  CMakeLists.txt  README.md  example.cpp  setup.py  test_ops.py
CodeSamples/python-setup/csrc/: CMakeLists.txt  cpu_ops.cpp  my_ops.cpp
CodeSamples/python-setup/csrc/cuda/: cuda_kernels.cu  cuda_ops.cu
CodeSamples/sematic_matching/: calibration.py  calibration_samples.txt  calibration_samples2.txt  download_model.sh  gen_calibra_data.py  gen_calibra_data2.py  industrial_part_names_en.txt  industrial_part_names_zh.txt  infer_onnx.py  infer_onnx_tokenizer.py  main_bge.py  main_text2vec.py  test_data.py
CodeSamples/tkinter/: scrollable_container.py  wrappable_container.py
Conda/: conda_open_proxy.bat  conda_remove_proxy.bat  conda_show_proxy.bat
Docker/: DockerFile.template
Frp/: frpc-mstsc-p2p-visitor.toml  frpc-mstsc-p2p-visitor.xml  frpc-mstsc-p2p.toml  frpc-mstsc-p2p.xml  frpc-mstsc.toml  frpc-mstsc.xml  frpc-ollama.toml  frpc-ollama.xml  frpc-ssh-wsl.toml  frpc-ssh-wsl.xml  readme.txt
Git/: closegitproxy .bat  extract_files_by_commits.sh  opengitproxy.bat  viewgitproxy.bat
Linux/: .zshrc  Linux使用笔记.txt  部署笔记.txt
(+65 files in other folders)
